cleanup commit